add UI customization

--- a/_includes/collection-banner.html
+++ b/_includes/collection-banner.html
@@ -32,6 +32,7 @@
         </div>{% endunless %}
     </div>
 </div>
+{% if site.data.theme.content-alert == true %}{% include index/content-alert.html %}{% endif %}
 {%- else -%}
 <div class="container">
     <div class="row align-items-center">
