--- a/_includes/item/image-gallery.html
+++ b/_includes/item/image-gallery.html
@@ -5,6 +5,6 @@
 
 {%- endcomment -%}
 <a class="spotlight gallery-img" data-download="true" href="{{ page.object_location | relative_url }}">
-    <img src="{{ page.image_small | relative_url }}" alt="{{ page.title | escape }}" class="img-fluid">
+    <img src="{{ page.image_small | relative_url }}" alt="{{ page.title | escape }}" class="img-fluid {% if page.sensitive %}blur{% endif %}">
     <div><small class="text-dark">Click to view full screen</small></div>
 </a>
