--- a/_includes/head/head.html
+++ b/_includes/head/head.html
@@ -38,4 +38,5 @@
 {% if layout.item-meta %}{% include head/item-meta.html %}{% else %}{% include head/page-meta.html %}{% endif %}
 {% include head/analytics.html %}
 {%- endif -%}
-<!-- Last build date: {{ site.time | date: "%Y-%m-%d" }} -->
+<!-- Last build date: {{ site.time | date: "%Y-%m-%d" }}
+digital-collections-template-cb-csv, metadata: {{ site.metadata }} -->
