--- a/_includes/collection-banner.html
+++ b/_includes/collection-banner.html
@@ -10,13 +10,25 @@
     padding-top: {{ site.data.theme.home-title-y-padding | default: '5em' }};
     padding-bottom: {{ site.data.theme.home-title-y-padding | default: '5em' }};
 }
+#home-banner-logo { 
+    height: 40px; 
+}
 @media screen and (max-width: 576px) {
     #home-title-box {
         max-height: 500px;
     }
 }
+.liblogo-corner {
+    border-bottom-left-radius: .25rem;
+}
+.liblogo-corner img{ height: 40px; }
 </style>
 <div id="home-banner" class="container-fluid mb-0 p-0">
+
+    <a class="d-none d-md-block float-end p-3 liblogo-corner bg-dark bg-opacity-75" href="https://www.lib.uidaho.edu/" title="University of Idaho Library home" target="_blank" rel="noopener">
+        <img alt="University of Idaho Library" src="https://www.lib.uidaho.edu/media/digital/liblogo_transparent.png" >
+    </a>
+
     <div id="home-title-box" class="position-relative" >
         <div class="p-2 text-center text-white bg-dark bg-opacity-75">
             {% if site.organization-logo-nav %}
@@ -42,8 +54,8 @@
         </div>
         {% if site.organization-logo-banner %}
         <div class="col-md-3 d-none d-lg-block text-end">
-            <a class="btn btn-outline-light" href="{{ site.organization-link }}" target="_blank" rel="noopener">
-                <img class="img-fluid" src="{{ site.organization-logo-banner | relative_url }}" title="{{ site.organization-name }}" alt="{{ site.organization-name }} home" >
+            <a class="btn btn-outline-light" href="{{ site.organization-link }}" title="{{ site.organization-name }} home" target="_blank" rel="noopener">
+                <img class="img-fluid" src="{{ site.organization-logo-banner | relative_url }}" alt="{{ site.organization-name }}" >
             </a>
         </div>
         {% endif %}
