--- a/_includes/collection-banner.html
+++ b/_includes/collection-banner.html
@@ -32,8 +32,8 @@
     <div id="home-title-box" class="position-relative" >
         <div class="p-2 text-center text-white bg-dark bg-opacity-75">
             {% if site.organization-logo-nav %}
-            <a class="d-none d-md-block" href="{{ site.organization-link }}" target="_blank" rel="noopener">
-                <img id="home-banner-logo" src="{{ site.organization-logo-nav | relative_url }}" alt="{{ site.organization-name }} home" >
+            <a class="d-none d-md-block" href="{{ site.organization-link }}" title="{{ site.organization-name | escape }} home" target="_blank" rel="noopener">
+                <img id="home-banner-logo" src="{{ site.organization-logo-nav | relative_url }}" alt="{{ site.organization-name | escape }}" >
             </a>{% endif %}
             <h1 class="display-4">{{ site.title }}</h1>
             {% if site.tagline %}<p class="mb-0">{{ site.tagline }}</p>{% endif %}
@@ -54,8 +54,8 @@
         </div>
         {% if site.organization-logo-banner %}
         <div class="col-md-3 d-none d-lg-block text-end">
-            <a class="btn btn-outline-light" href="{{ site.organization-link }}" title="{{ site.organization-name }} home" target="_blank" rel="noopener">
-                <img class="img-fluid" src="{{ site.organization-logo-banner | relative_url }}" alt="{{ site.organization-name }}" >
+            <a class="btn btn-outline-light" href="{{ site.organization-link }}" title="{{ site.organization-name | escape }} home" target="_blank" rel="noopener">
+                <img class="img-fluid" src="{{ site.organization-logo-banner | relative_url }}" alt="{{ site.organization-name | escape }}" >
             </a>
         </div>
         {% endif %}
