--- a/_includes/collection-nav.html
+++ b/_includes/collection-nav.html
@@ -5,8 +5,8 @@
         </button>
 
         {% if site.organization-logo-nav %}<span class="d-lg-none text-end">
-            <a href="{{ site.organization-link }}" target="_blank" rel="noopener" title="{{ site.organization-name }} home">
-                <img class="img-fluid" id="mobile-nav-image" src="{{ site.organization-logo-nav | relative_url }}" alt="{{ site.organization-name }}" >
+            <a href="{{ site.organization-link }}" target="_blank" rel="noopener">
+                <img class="img-fluid" id="mobile-nav-image" src="{{ site.organization-logo-nav | relative_url }}" title="{{ site.organization-name }}" alt="{{ site.organization-name | escape }} home" >
             </a>
         </span>{% endif %}
         
