Add timelinejs to homepage

--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -16,8 +16,6 @@ layout: page
     {% include index/time.html %}
 
     {% include index/featured-terms.html field="subject" title="Top Subjects" btn-color="primary" %}
-
-    {% include index/featured-terms.html field="location" title="Locations" btn-color="outline-secondary" %}
     
     {% include index/objects.html %}
 
@@ -26,6 +24,12 @@ layout: page
 
     {% include index/data-download.html %}
 
+  </div>
+
+  <div class="col-md-12">
+
+    {% include feature/timelinejs.html %}
+    
   </div>
 
 </div>
