Add mp3 to homepage

--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -13,8 +13,10 @@ layout: page
   </div>
   <div class="col-md-4">  
 
+    {% include feature/audio.html objectid="cnr064" width="50" caption="CNR Blues: A student-made song about the College of Natural Resources.'" %}
+    
     {% include index/time.html %}
-
+    
     {% include index/featured-terms.html field="subject" title="Top Subjects" btn-color="primary" %}
     
     {% include index/objects.html %}
