Rearrange home page elements

--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -8,23 +8,19 @@ layout: page
   <div class="col-md-8">
 
     {% include index/description.html %}
-    {% include index/carousel.html title="Sample Items" %}
+    {% include index/carousel.html title="Items from the Collection" %}
     
   </div>
   <div class="col-md-4">  
 
-    {% include feature/audio.html objectid="cnr064" width="50" caption="CNR Blues: A student-made song about the College of Natural Resources.'" %}
-    
     {% include index/time.html %}
-    
-    {% include index/featured-terms.html field="subject" title="Top Subjects" btn-color="primary" %}
+
+    {% include feature/audio.html objectid="cnr064" width="50" caption="CNR Blues: A student-made song about the College of Natural Resources" %}
     
     {% include index/objects.html %}
 
   </div>
   <div class="col-md-12">
-
-    {% include index/data-download.html %}
 
   </div>
 
