--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -15,7 +15,7 @@ layout: page
 
     {% include index/time.html %}
 
-    {% include feature/audio.html objectid="cnr064" width="50" caption="CNR Blues: A student-made song about the College of Natural Resources" %}
+    {% include index/featured-terms.html field="subject" title="Top Subjects" max=5 %}
     
     {% include index/objects.html %}
 
