Update citation format

--- a/_includes/item/citation-box.html
+++ b/_includes/item/citation-box.html
@@ -8,7 +8,7 @@
     <div class="card-body">
         <dl>
             <dt>Preferred Citation:</dt>
-            <dd>"{{ page.title }}", {{ site.title }}, {{ site.organization-name }}</dd>
+            <dd>"{{ page.title }}", <em>{{ site.title }}</em>, {{ page.collectionid }}, {{ site.organization-name }}</dd>
             <dt>Reference Link:</dt>
             <dd>{{ page.url | absolute_url }}</dd>
         </dl>
