--- a/_includes/index/featured-items.html
+++ b/_includes/index/featured-items.html
@@ -1,22 +1,32 @@
 <h4>Collection Highlights</h4>
-<br>
-<div class="card mb-3">
+<div class="container">
+  <div class="row">
+    <div class="col-12 col-md-4 mb-4 d-flex align-items-stretch">
       <div class="card">
         <div class="card-body">
-          <h5 class="card-title"><a href="/items/cnr003.html" target="_blank">University of Idaho: College of Forestry, Wildlife and Range Sciences, 1909-1984, an Album</a></h5>
+          <h5 class="card-title"><a href="/items/cnr003.html">College of Forestry, Wildlife and Range Sciences Album</a></h5>
+          <p class="card-text">An album covering history of the College of Forestry, Wildlife and Range Sciences, from 1909-1984.</p>
           <a class="btn btn-primary" href="/items/cnr003.html" role="button">View Album &raquo;</a>
         </div>
       </div>
-      <div class="card mb-3">
+    </div>
+    <div class="col-12 col-md-4 mb-4 d-flex align-items-stretch">
+      <div class="card">
         <div class="card-body">
-          <h5 class="card-title"><a href="/items/cnr063.html" target="_blank">College of Forestry, Wildlife, and Range Sciences Promo Video (1992)</a></h5>
+          <h5 class="card-title"><a href="/items/cnr064.html">College of Natural Resources (CNR) Blues</a></h5>
+          <p class="card-text">A student-made blues song about the College of Natural Resources created in 2003.</p>
+          <a class="btn btn-primary" href="/items/cnr064.html" role="button">Listen to Song &raquo;</a>
+        </div>
+      </div>
+    </div>
+    <div class="col-12 col-md-4 mb-4 d-flex align-items-stretch">
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title"><a href="/items/cnr063.html">College of Forestry, Wildlife and Range Sciences Promo Video</a></h5>
+          <p class="card-text">A 1992 promotional video about the College of Forestry, Wildlife and Range Sciences.</p>
           <a class="btn btn-primary" href="/items/cnr063.html" role="button">View Video &raquo;</a>
         </div>
       </div>
-      <div class="card mb-3">
-        <div class="card-body">
-          <h5 class="card-title"><a href="/items/cnr064.html" target="_blank">CNR Blues: A Student-Made Blues Song about CNR</a></h5>
-          <a class="btn btn-primary" href="/items/cnr064.html" role="button">Listen to Song &raquo;</a>
-        </div>
     </div>
+  </div>
 </div>
