--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -7,3 +7,29 @@
     -webkit-filter: blur(5px); /* Safari 6.0 - 9.0 */
     filter: blur(8px);
 }
+
+/* 
+    Put your custom SCSS here! 
+    This allows you to override any CollectionBuilder or Bootstrap CSS without modifying the base theme files directly.
+*/
+
+// body font
+body { 
+    //font-family: 'Noto Sans', sans-serif;
+    //font-weight: 300;
+}
+
+// essay styles
+.essay-title {
+    margin-top: 4rem;
+    margin-bottom: 2rem;
+}
+@include media-query($on-desktop) {
+    .essay-title {
+        margin-left: 5rem;
+    }
+}
+.next-buttons {
+    margin-top: 3rem;
+    margin-bottom: 10rem;
+}
