edit locations card

--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -17,7 +17,7 @@ layout: page
 
     {% include index/featured-terms.html field="subject" title="Top Subjects" btn-color="primary" %}
 
-    {% include index/featured-terms.html field="location" title="Locations" btn-color="outline-secondary" %}
+    {% include index/featured-terms.html field="city" title="Locations" btn-color="outline-secondary" max="15" %}
     
     {% include index/objects.html %}
 
