fix objects card with custom version

--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -19,7 +19,17 @@ layout: page
 
     {% include index/featured-terms.html field="city" title="Locations" btn-color="outline-secondary" max="15" %}
     
-    {% include index/objects.html %}
+    <div class="card mb-3" >
+      <div class="card-body">
+        <h5 class="card-title">Objects</h5>
+        <p class="card-text">
+          {%- assign count = items | size -%}
+          {{ count }} <a class="text-dark" href="{{ '/browse.html' | relative_url }}">Sanborn maps <svg class="bi icon-sprite text-body" fill="currentColor" aria-hidden="true"><use xlink:href="{{ '/assets/lib/cb-icons.svg' | relative_url }}#icon-record"/></svg></a><br>
+          
+          <a class="btn btn-sm btn-outline-secondary mt-2" href="{{ '/data.html' | relative_url }}">View table</a>
+        </p>
+      </div>
+    </div>
 
   </div>
   <div class="col-md-12">
