--- a/_layouts/item/sanborn-compound.html
+++ b/_layouts/item/sanborn-compound.html
@@ -2,7 +2,7 @@
 # basic layout for compound object items
 # uses _includes/item/child/ includes to add multiple objects to the item page in a gallery
 # each object is represented in a modal
-layout: item/item-page-base
+layout: item/sanborn-base
 gallery: true
 custom-foot: js/modal-hash-js.html
 ---
