--- a/_includes/item/child/sanborn-item-gallery.html
+++ b/_includes/item/child/sanborn-item-gallery.html
@@ -13,8 +13,6 @@
         <div class="card h-100">
             <div class="my-auto">
                 <div class="card-body text-center" id="{{ child.objectid }}Card">
-                
-                    {% if child.title %}<div class="small text-dark mb-2">{{ child.title | truncatewords: 4 }}</div>{% endif %}
                     
                     <div class="mb-2">
                         {% if child.image_thumb or child.image_small %}
@@ -35,7 +33,7 @@
                         href="#{{ child.objectid }}"
                         onclick="window.location.hash='{{ child.objectid }}'"
                         class="btn btn-sm btn-outline-secondary small stretched-link">
-                        {{ child.display_template | upcase | default: "Item" }} <svg class="bi icon-sprite text-body" fill="currentColor" aria-hidden="true"><use xlink:href="{{ '/assets/lib/cb-icons.svg' | relative_url }}#icon-{{ child.display_template | default: 'file'}}"/></svg>
+                        View Map
                     </a> 
 
                     <!-- child object modal -->
@@ -108,7 +106,16 @@
                                                     {% endif %}
                                                 </div>
                                                 <div class="my-2">
-                                                    {% include item/child/download-buttons.html %}
+                                                    <div class="btn-group my-2" role="group" aria-label="Item options">
+                                            
+                                                        {% if child.date %}{%- capture year -%}{% if child.date contains "-" %}{{ child.date | split: "-" | first }}{% elsif child.date contains "/" %}{{ child.date | split: "/" | last }}{% else %}{{ child.date }}{% endif %}{%- endcapture -%}
+                                                        <a href="{{ year | strip | prepend: '/timeline.html#y' | relative_url }}" class="btn btn-outline-primary">View on Timeline</a>{% endif %}
+                                                        {% if child.latitude and child.longitude %}
+                                                        <a href="{{ '/map.html?location=' | append: page.latitude  | append: ',' | append: page.longitude | append: '&marker=' | append: page.objectid | relative_url }}" class="btn btn-outline-primary">View on Map</a>{% endif %}
+                                                        {% if child.object_location %}<a target="_blank" rel="noopener" href="{{ child.object_location | relative_url }}" class="btn btn-outline-primary">
+                                                            Download Map
+                                                        </a>{% endif %}
+                                                    </div>
                                                 </div>
                                             </div>
                                         </div>
