Update timeline link to timelinejs

--- a/_includes/index/description.html
+++ b/_includes/index/description.html
@@ -2,6 +2,6 @@
   <div class="card-body">
     <p class="card-text">{{ site.description }}</p>
     <a class="btn btn-primary" href="{{ '/about.html' | relative_url }}" role="button">Learn More &raquo;</a>
-    <a class="btn btn-outline-dark" href="{{ '/timeline.html' | relative_url }}" role="button">View Interactive Timeline &raquo;</a>
+    <a class="btn btn-outline-dark" href="{{ '/timelinejs.html' | relative_url }}" role="button">View Interactive Timeline &raquo;</a>
   </div>
 </div>
