Update footer description

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,7 +5,7 @@
         <div class="col-md-7  px-4 mt-2">
 
             <h2 class="h4"><a href="{{ '/' | relative_url }}" class="text-white font-weight-normal">{{ site.title }}</a></h2>
-            <p class="text-white"><small>{{ site.description }}</small></p>
+            <p class="text-white"><small>The College of Natural Resources (CNR) has a long-standing history, beginning in 1909 and continuing to this present day. During the expanse of 100+ years, CNR has reshaped its mission and services, thanks to the leadership and vision of its Deans. This digital collection includes a wide breadth of featured material types: documents, correspondence, brochures, pictures, journals, and video and audio files.</small></p>
             <nav>
                 <ul id="footer-nav" class="nav nav-pills ">
                     {%- assign navItems = site.data.config-nav | where_exp: 'item', 'item.dropdown_parent == nil' -%}
