fix broken links / remove slash

--- a/_includes/index/featured-items.html
+++ b/_includes/index/featured-items.html
@@ -3,23 +3,23 @@
   <div class="row">
     <div class="card mb-3">
         <div class="card-body">
-          <h5 class="card-title"><a href="/items/cnr003.html">College of Forestry, Wildlife and Range Sciences Album</a></h5>
+          <h5 class="card-title"><a href="items/cnr003.html">College of Forestry, Wildlife and Range Sciences Album</a></h5>
           <p class="card-text">An album covering the history of the College of Forestry, Wildlife and Range Sciences, from 1909-1984.</p>
-          <a class="btn btn-primary" href="/items/cnr003.html" role="button">View Album &raquo;</a>
+          <a class="btn btn-primary" href="items/cnr003.html" role="button">View Album &raquo;</a>
         </div>
       </div>
       <div class="card mb-3">
         <div class="card-body">
-          <h5 class="card-title"><a href="/items/cnr064.html">College of Natural Resources (CNR) Blues</a></h5>
+          <h5 class="card-title"><a href="items/cnr064.html">College of Natural Resources (CNR) Blues</a></h5>
           <p class="card-text">A student-made blues song about the College of Natural Resources created in 2003.</p>
-          <a class="btn btn-primary" href="/items/cnr064.html" role="button">Listen to Song &raquo;</a>
+          <a class="btn btn-primary" href="items/cnr064.html" role="button">Listen to Song &raquo;</a>
       </div>
     </div>
       <div class="card mb-3">
         <div class="card-body">
-          <h5 class="card-title"><a href="/items/cnr063.html">College of Forestry, Wildlife and Range Sciences Promo Video</a></h5>
+          <h5 class="card-title"><a href="items/cnr063.html">College of Forestry, Wildlife and Range Sciences Promo Video</a></h5>
           <p class="card-text">A 1992 promotional video about the College of Forestry, Wildlife and Range Sciences.</p>
-          <a class="btn btn-primary" href="/items/cnr063.html" role="button">View Video &raquo;</a>
+          <a class="btn btn-primary" href="items/cnr063.html" role="button">View Video &raquo;</a>
         </div>
     </div>
   </div>
