--- a/_includes/item/child/sanborn-item-gallery.html
+++ b/_includes/item/child/sanborn-item-gallery.html
@@ -7,7 +7,8 @@
     This include requires the Liquid object "child" to be present! The item display requires the compound object item includes in "item/child/".
 
 {% endcomment %}
-<div class="row row-cols-2 row-cols-lg-4 g-2">
+{% assign c-count = children | size %}
+<div class="row row-cols-2{% if c-count > 4 %} row-cols-lg-4{% endif %} g-2">
     {% for child in children %}
     <div class="col">
         <div class="card h-100">
