--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -7,3 +7,7 @@
     -webkit-filter: blur(5px); /* Safari 6.0 - 9.0 */
     filter: blur(8px);
 }
+.compound-thumb {
+    max-height: initial;
+    max-width: 90%;
+}
