create custom gallery for maps make individual maps similar looking to compound version

--- a/_layouts/item/sanborn-map.html
+++ b/_layouts/item/sanborn-map.html
@@ -6,11 +6,11 @@ layout: item/sanborn-base
 gallery: true
 ---
 
-<div class="card mb-4 text-center">
+<div class="mb-4">
 
-    {% include item/image-gallery.html %}
+    {% include item/sanborn-map-gallery.html %}
     
-    <div class="card-body">
+    <div class="my-3">
 
         {% include item/download-buttons.html %}
 
