--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -9,7 +9,7 @@ layout: page
   </div>
 </div>
 <div class="row">
-  <div class="col-md-6 px-5 mb-5">
+  <div class="row justify-content-md-center">
     <p class="h4"><b><i>Black History @ the University of Idaho</i></b> is an ongoing collaboration between the <a href="https://www.uidaho.edu/ed/about/spaces/bhrl" target="_blank">Black History Research Lab</a> and the <a href="https://lib.uidaho.edu/" target="_blank">University of Idaho Library</a> that examines the history and contribution of Black students, faculty, staff, and administrators at the University of Idaho.</p>
     <p class="h4 mt-3">Directed by <a href="https://www.uidaho.edu/ed/lc/faculty/sydney-freeman">Dr. Sydney Freeman Jr.</a>, this digital exhibit space and the regular physical exhibits that accompany and enhance the project seek to uncover untold histories and highlight the accomplishments of Black individuals on campus. </p>
 
