--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -9,10 +9,13 @@ layout: page
   </div>
 </div>
 <div class="row">
-  <div class="row justify-content-md-center">
+  <div class="col-md-6 px-5 mb-5">
     <p class="h4"><b><i>Black History @ the University of Idaho</i></b> is an ongoing collaboration between the <a href="https://www.uidaho.edu/ed/about/spaces/bhrl" target="_blank">Black History Research Lab</a> and the <a href="https://lib.uidaho.edu/" target="_blank">University of Idaho Library</a> that examines the history and contribution of Black students, faculty, staff, and administrators at the University of Idaho.</p>
     <p class="h4 mt-3">Directed by <a href="https://www.uidaho.edu/ed/lc/faculty/sydney-freeman">Dr. Sydney Freeman Jr.</a>, this digital exhibit space and the regular physical exhibits that accompany and enhance the project seek to uncover untold histories and highlight the accomplishments of Black individuals on campus. </p>
-
   </div>
 
+  <div id="president-intro" class="col-md-6 justify-content-center text-center mb-5">
+    <h2>An Introduction from the President</h2>
+    {% include feature/video.html objectid="https://youtu.be/jfFUp-d5YL0" %}
+  </div>
 </div>
