--- a/_includes/head/head.html
+++ b/_includes/head/head.html
@@ -22,7 +22,7 @@
 <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 {% endif %}
 <link rel="stylesheet" href="{{ '/bootstrap5/bootstrap.min.css' | prepend: site.digital-assets }}" type="text/css">
-{% if page.layout == 'data' %}<link rel="stylesheet" type="text/css" href="{{ '/datatables/datatables.min.css' | prepend: site.digital-assets }}">{%- endif -%}
+{% if page.layout == 'data' %}<link rel="stylesheet" type="text/css" href="{{ '/bootstrap5/datatables/datatables.min.css' | prepend: site.digital-assets }}">{%- endif -%}
 {% if page.layout == 'map' %}<link rel="stylesheet" href="{{ '/leaflet/leaflet.css' | prepend: site.digital-assets }}">
 <link rel="stylesheet" href="{{ '/leaflet/leaflet.fullscreen.css' | prepend: site.digital-assets }}">
 {% if site.data.theme.map-search == true %}<link rel="stylesheet" href="{{ '/leaflet/leaflet.fusesearch.css' | prepend: site.digital-assets }}">{%- endif -%}
