--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
 
     <div class="row border-bottom border-white pb-4 mb-2">
 
-        <div class="col-md-7  px-4 mt-2">
+        <div class="col-md-7  px-4 mt-3">
 
             <h2 class="h4"><a href="{{ '/' | relative_url }}" class="text-white font-weight-normal">{{ site.title }}</a></h2>
             <p class="text-white"><small>{{ site.description }}</small></p>
@@ -24,28 +24,31 @@
 
         </div>
 
-        <div class="col-md-5 mt-2 text-end">
+        <div class="col-md-5 mt-3 text-center">
 
-           {% if site.organization-logo-nav %} <p class="text-end">
+           {% if site.organization-logo-nav %} <p class="text-md-end">
                 <a href="{{ site.organization-link }}" target="_blank" rel="noopener" title="{{ site.organization-name }} home">
                     <img id="footer-logo" class="img-fluid" src="{{ site.organization-logo-nav | relative_url }}" alt="{{ site.organization-name }}">
                 </a>
             </p>
             {% endif %}
-            <p class="text-white" id="footer-credits">
-                <small><em>built with</em>
-                    <a href="https://collectionbuilder.github.io/" target="_blank" rel="noopener" title="CollectionBuilder">
-                        <img src="{{ '/assets/img/collectionbuilder-logo.png' | relative_url }}" class="img-fluid" alt="CollectionBuilder logo" >
-                    </a>
-                </small>
+            <p class="text-white text-md-end" id="footer-credits">
+                <small><em>built with</em> <a href="https://collectionbuilder.github.io/" target="_blank" rel="noopener" class="text-white text-decoration-underline" >CollectionBuilder</a></small>
             </p>
 
         </div>
 
     </div>
 
-    <div class="col-md-12 text-center pt-3 pb-1">
-        <a href="https://www.lib.uidaho.edu/digital/" title="{{ site.organization-name }} home"><img class="img-fluid mb-2 footer-diginit" src="https://www.lib.uidaho.edu/media/digital/bannerlogo_allwhite.png" alt="{{ site.organization-name }}"></a>
+    <div class="text-center pt-3 pb-1">
+        <p class="h2 mb-3">
+            <a href="https://www.lib.uidaho.edu/digital/" title="{{ site.organization-name }} home" class="text-white">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi icon-sprite" viewBox="0 0 16 16" aria-hidden="true">
+                        <path d="M10.478 1.647a.5.5 0 1 0-.956-.294l-4 13a.5.5 0 0 0 .956.294l4-13zM4.854 4.146a.5.5 0 0 1 0 .708L1.707 8l3.147 3.146a.5.5 0 0 1-.708.708l-3.5-3.5a.5.5 0 0 1 0-.708l3.5-3.5a.5.5 0 0 1 .708 0zm6.292 0a.5.5 0 0 0 0 .708L14.293 8l-3.147 3.146a.5.5 0 0 0 .708.708l3.5-3.5a.5.5 0 0 0 0-.708l-3.5-3.5a.5.5 0 0 0-.708 0z"/>
+                </svg>
+                Digital Initiatives
+            </a>
+        </p>
         <p class="text-white h6">Last updated {{ site.time | date: '%Y' }}</p>
     </div>
 
