--- a/_includes/collection-banner.html
+++ b/_includes/collection-banner.html
@@ -24,12 +24,10 @@
 .liblogo-corner img{ height: 45px; }
 </style>
 <div id="home-banner" class="container-fluid mb-0 p-0">
-
-    <a class="d-none d-md-block float-end p-3 liblogo-corner bg-dark bg-opacity-75" href="https://www.lib.uidaho.edu/" title="University of Idaho Library home" target="_blank" rel="noopener">
-        <img alt="University of Idaho Library" src="https://www.lib.uidaho.edu/media/digital/liblogo_transparent.png" >
-    </a>
-
     <div id="home-title-box" class="position-relative" >
+        <a class="d-none d-md-block position-absolute top-0 end-0 p-3 liblogo-corner bg-dark bg-opacity-75" href="https://www.lib.uidaho.edu/" title="University of Idaho Library home" target="_blank" rel="noopener">
+            <img alt="University of Idaho Library" src="https://www.lib.uidaho.edu/media/digital/liblogo_transparent.png" >
+        </a>
         <div class="p-2 text-center text-white bg-dark bg-opacity-75">
             <h1 class="display-4">{{ site.title }}</h1>
             {% if site.tagline %}<p class="mb-0">{{ site.tagline }}</p>{% endif %}
@@ -45,7 +43,7 @@
 <div class="container">
     <div class="row align-items-center">
         <div id="title" class="{% if site.organization-logo-banner %}col-md-9{% else %}col-12{% endif %}">
-            <h1><a class="text-dark font-weight-normal" href="{{ site.baseurl }}/" >{{ site.title }}</a></h1>	 
+            <h1 class="mt-2"><a class="text-dark font-weight-normal" href="{{ site.baseurl }}/" >{{ site.title }}</a></h1>	 
             {% if site.tagline %}<p>{{ site.tagline }}</p>{% endif %}
         </div>
         {% if site.organization-logo-banner %}
