--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
 
         <div class="col-md-7 px-4 mt-3">
 
-            <h2 class="h4"><a href="{{ '/' | relative_url }}" class="text-white font-weight-normal">{{ site.title }}</a></h2>
+            <h2 class="h4"><a href="{{ '/' | relative_url }}" class="text-white">{{ site.title }}</a></h2>
             <p class="text-white"><small>{{ site.description }}</small></p>
             <nav>
                 <ul id="footer-nav" class="nav nav-pills ">
@@ -39,8 +39,7 @@
         </div>
 
     </div>
-
-    <div class="text-center pt-3 pb-1">
+    <div class="text-center pt-4 pb-3">
         <p class="h2 mb-3">
             <a href="https://www.lib.uidaho.edu/digital/" title="{{ site.organization-name }} home" class="text-white">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi icon-sprite" viewBox="0 0 16 16" aria-hidden="true">
