tweak color theme home page

--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -15,9 +15,9 @@ layout: page
 
     {% include index/time.html %}
 
-    {% include index/featured-terms.html field="subject" title="Top Subjects" btn-color="primary" %}
+    {% include index/featured-terms.html field="subject" title="Top Subjects" btn-color="payette-blue" %}
 
-    {% include index/featured-terms.html field="location" title="Locations" btn-color="outline-secondary" %}
+    {% include index/featured-terms.html field="location" title="Locations" btn-color="outline-payette-blue" %}
     
     {% include index/objects.html %}
 
