--- a/_includes/collection-banner.html
+++ b/_includes/collection-banner.html
@@ -21,7 +21,7 @@
 .liblogo-corner {
     border-bottom-left-radius: .25rem;
 }
-.liblogo-corner img{ height: 45px; }
+.liblogo-corner img{ height: 55px; }
 </style>
 <div id="home-banner" class="container-fluid mb-0 p-0">
     <div id="home-title-box" class="position-relative" >
@@ -42,12 +42,12 @@
 {%- else -%}
 <div class="container">
     <div class="row align-items-center">
-        <div id="title" class="{% if site.organization-logo-banner %}col-md-9{% else %}col-12{% endif %}">
-            <h1 class="mt-2"><a class="text-dark font-weight-normal" href="{{ site.baseurl }}/" >{{ site.title }}</a></h1>	 
+        <div id="title" class="{% if site.organization-logo-banner %}col-md-10{% else %}col-12{% endif %}">
+            <h1 class="mt-2"><a class="text-dark" href="{{ '/' | relative_url }}" >{{ site.title }}</a></h1>	 
             {% if site.tagline %}<p>{{ site.tagline }}</p>{% endif %}
         </div>
         {% if site.organization-logo-banner %}
-        <div class="col-md-3 d-none d-lg-block text-end">
+        <div class="col-md-2 d-none d-lg-block text-end">
             <a class="btn btn-outline-light" href="{{ site.organization-link }}" title="{{ site.organization-name | escape }} home" target="_blank" rel="noopener">
                 <img class="img-fluid" src="{{ site.organization-logo-banner | relative_url }}" alt="{{ site.organization-name | escape }}" >
             </a>
