tweak head links

--- a/_includes/head/head.html
+++ b/_includes/head/head.html
@@ -39,4 +39,6 @@
 {%- endif -%}
 {% if site.noindex == true or page.noindex == true or layout.noindex == true %}<meta name="robots" content="noindex" />{% endif %}
 <!-- Last build date: {{ site.time | date: "%Y-%m-%d" }}
-digital-collections-template-cb-csv, metadata: {{ site.metadata }} -->
+digital-collections-template-cb-csv, metadata: {{ site.metadata }}
+{{ site.source-code }} 
+-->
